<resources>
    <string name="home_add_water"> Add Water </string>
    <string name="app_name"> Track My Diet </string>
    <string name="popup_bfast"> Breakfast </string>
    <string name="popup_lunch"> Lunch </string>
    <string name="popup_dinner"> Dinner </string>
    <string name="popup_snack"> Snack </string>
    <string name="carbs_title"> Carbs </string>
    <string name="calories_left">Calories Left</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="create_acct_title"> Create New Account </string>
    <string name="cups"> cups </string>
    <string name="ounces"> ounces </string>
    <string name="pounds_abr"> lbs </string>
    <string name="kilograms_abr"> kg </string>
    <string name="feet"> Feet </string>
    <string name="feet_abv"> ft </string>
    <string name="inches"> Inches </string>
    <string name="inches_abv"> in </string>
    <string name="height_prompt"> Enter your height:</string>
    <string name="weight_prompt"> Weight (lbs)</string>
    <string name="nutrients_calc_title"> Daily Nutrients Calculator </string>
    <string name="age_prompt">Age (years)</string>
    <string name="diet_type_prompt"> Diet Type </string>
    <string name="register_acct"> Register Here </string>
    <string name="email_field_prompt">Email-Address</string>
    <string name="meal_type"> Meal Type: </string>
    <string name="serving_weight"> Serving Weight: </string>
    <string name="fat_title"> Fat </string>
    <string name="first_name_prompt"> First Name </string>
    <string name="food_diary_title"> Food Diary </string>
    <string name="forgot_password_text"> Forgot Password </string>
    <string name="forgot_password_title"> Forgot Password? </string>
    <string name="forgot_password_hint"> Enter your email address and we will send a password reset link </string>
    <string name="gender_prompt"> Gender: </string>
    <string name="last_name_prompt"> Last Name </string>
    <string name="log_in_title"> Log In </string>
    <string name="main_button_text"> Press Me! </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="search_food_title"> Search Food: </string>
    <string name="search_food_hint"> Enter food name: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_results">Results</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="search_title"> Search </string>
    <string name="title_activity_login">Sign in</string>
    <string name="submit"> Submit </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="update"> Update </string>
    <string name="protein_title"> Protein </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">"Forgot password?"</string>
    <string name="action_register">"Don't have an account? Register now"</string>
    <string name="calories">"Calories:"</string>
    <string name="total_fats">"Total Fats:"</string>
    <string name="saturated_fats">"Saturated Fats:"</string>
    <string name="cholesterol">"Cholesterol:"</string>
    <string name="sodium">"Sodium:"</string>
    <string name="carbs">"Carbohydrates:"</string>
    <string name="fiber">"Fiber:"</string>
    <string name="sugar">"Sugar:"</string>
    <string name="protein">"Protein:"</string>
    <string name="potassium">"Potassium:"</string>
    <string name="add">"Add to meal"</string>
    <string name="add_some_food"> + Add Some Food </string>
    <string name="male_choice"> Male </string>
    <string name="female_choice"> Female </string>
    <string name="confirm_password_prompt"> Confirm Password </string>
    <string name="password_field_prompt"> Password </string>
    <string name="send_btn_text"> Send </string>
    <string name="password_strength_prompt">  At least 8 characters </string>
    <string name="register_btn_text"> Register </string>
    <string name="sign_in_btn_text"> Sign In </string>
    <string name="home_food_log_summary"> View Summary </string>
    <string name="ounces_unit"> oz </string>
    <string name="calories_unit"> cal </string>
    <string name="grams_unit"> g </string>
    <string name="milligrams_unit"> mg </string>
    <string name="num_servings_title"> Number of Servings </string>
    <string name="water"> Water </string>
    <string name="weight"> Weight </string>
    <string name="food_log_title"> %1$s Log: </string>
    <string name="food_entry_desc"> %1$s servings, %2$s calories </string>
    <string name="homepage_macros" formatted="false"> %1$s / %2$s g </string>
    <string name="home_meal_entry_cal"> %1$s calories</string>
    <string name="add_more_food_menu_item">Add More Food</string>
    <string name="save_food_log_menu_item">Save Food Log</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_goals_title">My Goals</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="calories_title">Calories</string>
    <string name="daily_calories">Daily Calories</string>
    <string name="save_changes">Save Changes</string>
    <string name="target_weight">Target Weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="please_enter_all_values_in_grams">Please enter all values in Grams</string>
    <string name="scale">scale</string>
</resources>
