<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.nyit.trackmydiet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_results"
        android:name="edu.nyit.trackmydiet.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="edu.nyit.trackmydiet.ui.goals.GoalsFragment"
        android:label="Goals"
        tools:layout="@layout/fragment_goals"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.nyit.trackmydiet.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_about"
        android:name="edu.nyit.trackmydiet.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>